2008-07-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.c src/eval.h (gp_word gp_words) C-callable versions of the
	built-in functions word() and words().

	* src/parse.c (check_for_iteration next_iteration) docs/gnuplot.doc:
	Sanity check the name of the variable used for iteration.  New syntax 
	allows iteration over the entries in a string:
	    plot for [foo in "a b c d"] ...

	* src/util.c (int_error): Allow somewhat longer error messages.

	* term/post.trm (PS_vector): Work around a bug in ghostscript/gv.
	If there is a long string of mixed relative/absolute lines without a
	stroke command, ghostscript renders it veeeery slowly.  We already 
	limit the number of relative moves in a row; this patch adds a "stroke".
	Bug #2021942

2008-07-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_vectors) src/plot2d.c (get_data):
	Allow 2D vector plots to take color from an extra data column.
	Give an error when variable color is requested but too few data columns.

	* src/graph3d.c plot3d.c: Consolidate variable color checks into a
	single routine. Allow 3D vector plots with variable color.

2008-07-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot): Move palette
	initialization earlier in the sequence, so that no objects or axes are
	drawn before the palette is defined.
	Bug #2019453

2008-07-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (histogram_range_fiddling):
	Fix logic for autoscaling y range of stacked histograms.

2008-07-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (histogram_range_fiddling eval_plots):  Center stacked
	histograms at true x coordinate.  Allow user to set this via
	'newhistogram {at <x-coord>}'.  Adjust xmin value accordingly.

2008-07-14  Hilgers Christian  <hilgers@muc.zae-bayern.de>

	* src/graphics.c src/plot2d.c docs/gnuplot.doc:
	When constructing stacked histograms, track positive values separately